# trimer-clip

./: .gitignore  AGENTS.md  README.md  SKILLS.md  pyproject.toml  requirements.txt
.serena/: project.yml
.serena/memories/: codebase_structure.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
references/: README.md
scripts/models/: gemini_transcriber.py  google_stt_transcriber.py  openai_transcriber.py  whisper_transcriber.py
scripts/shared/: audio_utils.py  ffmpeg_wrapper.py  subtitle_utils.py  video_utils.py
skills/autocut-shorts/: SKILL.md
skills/autocut-shorts/scripts/: autocut.py
skills/batch-processor/scripts/: batch_from_urls.py  batch_process.py
skills/highlight-scanner/scripts/: find_highlights.py
skills/laughter-detector/scripts/: detect_laughter.py
skills/portrait-resizer/: SKILL.md
skills/portrait-resizer/scripts/: batch_resize.py  resize_to_portrait.py
skills/scene-detector/scripts/: detect_scenes.py
skills/sentiment-analyzer/scripts/: analyze_sentiment.py
skills/speaker-diarization/scripts/: analyze_speaker_dynamics.py  diarize.py  extract_speaker_segments.py
skills/subtitle-overlay/: SKILL.md
skills/subtitle-overlay/scripts/: add_subtitles.py
skills/video-transcriber/: SKILL.md
skills/video-transcriber/scripts/: analyze.py  transcribe.py
skills/video-trimmer/scripts/: trim.py  trim_multiple.py
skills/youtube-downloader/scripts/: download.py  download_playlist.py
