[project]
name = "trimer-clip"
version = "1.0.0"
description = "Agent Skills for AI-powered video editing and autocut for short-form content"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "ffmpeg-python>=0.2.0",
    "pydub>=0.25.0",
    "openai-whisper>=20231117",
    "faster-whisper>=1.0.0",
    "pyannote.audio>=3.1.0",
    "speechbrain>=0.5.0",
    "google-generativeai>=0.8.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "scenedetect[opencv]>=0.6.0",
    "moviepy>=1.0.3",
    "opencv-python>=4.8.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "yt-dlp>=2024.1.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
